--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -19,4 +19,5 @@
 //layouts
 @import "./layouts/wrapper";
 @import "./layouts/header";
-@import "./layouts/footer"
+@import "./layouts/footer";
+@import "./layouts/select"
