--- a/src/sass/abstract/_constants.scss
+++ b/src/sass/abstract/_constants.scss
@@ -9,6 +9,9 @@ $color-dark: #000000;
 $color-border: #E3E1D5;
 $color-ico-closed: #D9D9D9;
 $color-drop-down: #D6E7D2;
+$color-drop-down-active: #C1E698;
+$color-dror-down-back: #DCE9D9;
+
 
 
 $desctop-width: 1440px;
