--- a/src/sass/base/_buttons.scss
+++ b/src/sass/base/_buttons.scss
@@ -18,10 +18,22 @@
             padding: 6px 16px;
         }
     }
+    &_contacts {
+        padding: 7px 57px;;
+        @extend %font-primary;
+        @include font (nomal, 700, 10px, 1.3rem);
+        border: solid 2px $color-additional;
+        border-radius: 5px;
+        color: $color-dark;
+        &:hover {
+            background-color: $color-additional;
+            color: $color-light;
+        }
+    }
     &_colored {
+        color: $color-additional;
         @extend %font-additional;
         @include font (normal, 400, 2rem, 2.6rem);
-        color: $color-additional;
         width: 161px;
         border: solid 1px $color-additional;
         border-radius: 5px;
@@ -30,7 +42,21 @@
         }
         &:hover {
             background-color: $color-additional;
+                color: $color-light;
+        }
+        &_active {
+            @extend %font-additional;
+            @include font (normal, 400, 2rem, 2.6rem);
+            width: 161px;
+            border: solid 1px $color-additional;
+            border-radius: 5px;
+            background-color: $color-additional;
             color: $color-light;
+            &:hover {
+                color: $color-background;
+                font-weight: normal;
+                border: solid 1px $color-additional;
+            }
         }
         @include media-tablet {
             width: calc(130px + (161 - 130) * ((100vw - 460px) / (760 - 460)));
