--- a/src/sass/abstract/_constants.scss
+++ b/src/sass/abstract/_constants.scss
@@ -11,6 +11,7 @@ $color-ico-closed: #D9D9D9;
 $color-drop-down: #D6E7D2;
 $color-drop-down-active: #C1E698;
 $color-dror-down-back: #DCE9D9;
+$color-line: #AEA1A1;
 
 
 
