feat: add card filter

--- a/src/sass/style.css
+++ b/src/sass/style.css
@@ -562,6 +562,11 @@ h5 {
   }
 }
 
+@media (hover: hover) {
+  button:hover {
+    background-color: blue;
+  }
+}
 .hamb {
   margin-left: auto;
 }
