--- a/src/sass/components/_prices.scss
+++ b/src/sass/components/_prices.scss
@@ -139,7 +139,7 @@
     width: 250px;
     z-index: 1;
     overflow: hidden;
-    transition: max-height 0.2s ease-out;
+    transition: 0.3s;
     @include media-tablet {
         width: calc(170px + (250 - 170) * ((100vw - 460px) / (768 - 460)));
     }
@@ -203,6 +203,7 @@
     background-color: $color-drop-down;
     border-radius: 0 0 20px 20px;
     padding: 0 40px 12px 40px;
+    transition: 0.3s ease-in-out;
 }
 
 .accordion__description {
