fix: resolve mistakes in accordion

--- a/src/sass/components/_prices.scss
+++ b/src/sass/components/_prices.scss
@@ -105,6 +105,9 @@
         align-items: center;
         justify-content: space-around;
     }
+    &.accordion_active + .accordion__content{
+        display: block;
+    }
 }
 
 .accordion__title {
