--- a/src/sass/base/_buttons.scss
+++ b/src/sass/base/_buttons.scss
@@ -32,10 +32,6 @@
         border: solid 2px $color-additional;
         border-radius: 5px;
         color: $color-dark;
-        &:hover {
-            background-color: $color-additional;
-            color: $color-light;
-        }
     }
     &_colored {
         color: $color-additional;
@@ -76,6 +72,10 @@
 
 @media (hover: hover) {
     .button_colored:hover {
+        background-color: $color-additional;
+        color: $color-light;
+    }
+    .button_contacts:hover {
         background-color: $color-additional;
         color: $color-light;
     }
