fix: repair the accordion

--- a/src/sass/base/_buttons.scss
+++ b/src/sass/base/_buttons.scss
@@ -70,13 +70,13 @@
     }
 }
 
-@media (hover: hover) {
-    .button_colored:hover {
-        background-color: $color-additional;
-        color: $color-light;
-    }
-    .button_contacts:hover {
-        background-color: $color-additional;
-        color: $color-light;
-    }
-}
+// @media (hover: hover) {
+//     .button_colored:hover {
+//         background-color: $color-additional;
+//         color: $color-light;
+//     }
+//     .button_contacts:hover {
+//         background-color: $color-additional;
+//         color: $color-light;
+//     }
+// }
